--- a/zpapp/templates/zpapp/base.html
+++ b/zpapp/templates/zpapp/base.html
@@ -37,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'home' %}">ZpApp</a>
+          <a class="navbar-brand" href="{% url 'admin:index' %}">ZpApp</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
